[#108] 회원가입 뷰 서비스 이용약관/개인정보 정책 페이지 연결, 버튼 색 등록

--- a/Cardna-iOS/Cardna-iOS/Source/Scene/Login/Login.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/Login/Login.storyboard
@@ -89,7 +89,7 @@
                                     <constraint firstAttribute="height" constant="64" id="kLG-v9-huo"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain"/>
+                                <buttonConfiguration key="configuration" style="plain" title=""/>
                                 <connections>
                                     <action selector="okButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="n0z-uu-BFd"/>
                                 </connections>
