--- a/Cardna-iOS/Cardna-iOS/Source/Scene/CardNotYetBox/CardNotYetBox.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/CardNotYetBox/CardNotYetBox.storyboard
@@ -47,7 +47,7 @@
                                     <constraint firstItem="KQL-V1-yun" firstAttribute="leading" secondItem="tBh-TJ-c1v" secondAttribute="leading" constant="16" id="t12-c2-zpO"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="egt-4E-gQO">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="egt-4E-gQO">
                                 <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
