--- a/Cardna-iOS/Cardna-iOS/Source/Scene/Home/Home.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/Home/Home.storyboard
@@ -75,6 +75,9 @@
                                 <rect key="frame" x="125" y="731.5" width="164" height="54"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="btYoucardpack"/>
+                                <connections>
+                                    <action selector="friendCardPackButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="BlF-BA-juv"/>
+                                </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9tg-bz-n4z">
                                 <rect key="frame" x="16" y="199.5" width="17.5" height="4"/>
