--- a/Cardna-iOS/Cardna-iOS/Source/Scene/CardDetail/CardDetail.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/CardDetail/CardDetail.storyboard
@@ -22,6 +22,10 @@
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HbF-9s-1jm">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="420"/>
                                     </imageView>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2zy-We-vTA">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="420"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.46872162400630485" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K8a-zV-z1p">
                                         <rect key="frame" x="374" y="382" width="24" height="22"/>
                                         <constraints>
@@ -39,11 +43,15 @@
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="HbF-9s-1jm" secondAttribute="trailing" id="05F-vB-tfX"/>
                                     <constraint firstItem="HbF-9s-1jm" firstAttribute="leading" secondItem="Z4l-IB-JkV" secondAttribute="leading" id="0c0-zm-DIJ"/>
+                                    <constraint firstItem="2zy-We-vTA" firstAttribute="top" secondItem="Z4l-IB-JkV" secondAttribute="top" id="983-6j-L6n"/>
                                     <constraint firstItem="HbF-9s-1jm" firstAttribute="top" secondItem="Z4l-IB-JkV" secondAttribute="top" id="BHm-yr-NR3"/>
+                                    <constraint firstAttribute="bottom" secondItem="2zy-We-vTA" secondAttribute="bottom" id="EGJ-sz-WHF"/>
                                     <constraint firstAttribute="trailing" secondItem="K8a-zV-z1p" secondAttribute="trailing" constant="16" id="Li4-mE-MNu"/>
                                     <constraint firstAttribute="height" constant="420" id="P2x-FX-OI2"/>
                                     <constraint firstAttribute="bottom" secondItem="K8a-zV-z1p" secondAttribute="bottom" constant="16" id="QFP-0P-SbL"/>
                                     <constraint firstAttribute="bottom" secondItem="HbF-9s-1jm" secondAttribute="bottom" id="kgu-Ls-Muv"/>
+                                    <constraint firstItem="2zy-We-vTA" firstAttribute="leading" secondItem="Z4l-IB-JkV" secondAttribute="leading" id="ojz-Ei-hRh"/>
+                                    <constraint firstAttribute="trailing" secondItem="2zy-We-vTA" secondAttribute="trailing" id="tcr-rS-dMq"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GN9-Za-hmY">
@@ -209,6 +217,7 @@
                         <outlet property="imageContainerViewHeightConstraint" destination="P2x-FX-OI2" id="0PR-5S-yUI"/>
                         <outlet property="imageView" destination="HbF-9s-1jm" id="Zmg-GB-gvo"/>
                         <outlet property="likeButton" destination="K8a-zV-z1p" id="k9Z-4o-z99"/>
+                        <outlet property="lottieBgView" destination="2zy-We-vTA" id="xKN-RC-jMS"/>
                         <outlet property="menuButton" destination="kec-gq-IeN" id="KmO-Dv-5xm"/>
                         <outlet property="menuButtonView" destination="tyg-Ah-pAI" id="0aX-Uc-IQ6"/>
                         <outlet property="shareButton" destination="lNS-2y-FnT" id="6jw-Ri-ja3"/>
