--- a/Cardna-iOS/Cardna-iOS/Source/Scene/Join/JoinViewController.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/Join/JoinViewController.storyboard
@@ -145,14 +145,6 @@
                                     <action selector="touchUpPrivacyButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="qap-k1-elf"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CvU-Q9-mVS">
-                                <rect key="frame" x="17" y="459" width="381" height="64"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="64" id="ycW-1k-vcW"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain"/>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Ag-t4-zd3">
                                 <rect key="frame" x="356" y="259" width="42" height="42"/>
                                 <constraints>
@@ -206,6 +198,17 @@
                                     <constraint firstAttribute="height" constant="64" id="QiV-yQ-z1w"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CvU-Q9-mVS">
+                                <rect key="frame" x="17" y="459" width="381" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="ycW-1k-vcW"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
+                                <connections>
+                                    <action selector="touchUpJoinCompleteButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="zyp-3Z-h92"/>
+                                </connections>
+                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="확인" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lHh-7t-ApB">
                                 <rect key="frame" x="192.5" y="476" width="30" height="30"/>
                                 <constraints>
@@ -316,6 +319,9 @@
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="icbtBack" title=""/>
+                                        <connections>
+                                            <action selector="touchUpBackButton:" destination="6rA-by-0Rf" eventType="touchUpInside" id="IIY-92-gJX"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -376,6 +382,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="확인"/>
+                                <connections>
+                                    <action selector="touchUpNameCompleteButton:" destination="6rA-by-0Rf" eventType="touchUpInside" id="gpp-ZN-GPu"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ucK-jG-3ah"/>
@@ -402,6 +411,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="backButton" destination="26f-Bz-1Up" id="kuH-nV-L3o"/>
                         <outlet property="nameCompleteButton" destination="pTJ-OI-CVJ" id="H7W-NM-JKs"/>
                         <outlet property="nameCountLabel" destination="nGX-ZP-mhm" id="yvn-I3-DxT"/>
                         <outlet property="nameExplainLabel" destination="j7V-rd-8Eo" id="QVW-Os-eld"/>
@@ -462,7 +472,7 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lFI-fj-wwG">
                                         <rect key="frame" x="16" y="24" width="96" height="20.5"/>
-                                        <mutableString key="text">제  1 조 (목적)
+                                        <string key="text">제  1 조 (목적)
 
 본 약관은 회원(본 약관에 동의한 자를 말합니다 이하 "회원"이라고 합니다.) 이 카드나(이하 "회사"라고 합니다.)이 제공하는 카드나 앱 서비스(이하 "서비스"라고 합니다.)를 이용함에 있어 회사와 회원의 권리·의무 및 책임사항을 규정함을 목적으로 합니다.
 
@@ -619,7 +629,7 @@
 
 **부칙**
 
-제1조 (시행일) 본 약관은 2022년 01월 01일부터 시행합니다.</mutableString>
+제1조 (시행일) 본 약관은 2022년 01월 01일부터 시행합니다.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -706,7 +716,7 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pW1-df-Lg3">
                                         <rect key="frame" x="16" y="24" width="1311" height="21"/>
-                                        <mutableString key="text">카드나는 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.
+                                        <string key="text">카드나는 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.
 
 * 이 개인정보처리방침은 2022년 1월 1부터 적용됩니다.
 
@@ -758,7 +768,7 @@
 
 제12조(개인정보 처리방침 변경)
 ① 이 개인정보처리방침은 2022년 1월 1부터 적용됩니다.
-② 이전의 개인정보 처리방침은 아래에서 확인하실 수 있습니다.</mutableString>
+② 이전의 개인정보 처리방침은 아래에서 확인하실 수 있습니다.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
