[#258] 사진없을 때 카드너 추가 터지는 오류 수정, 카드팩 기본 숫자 변경

--- a/Cardna-iOS/Cardna-iOS/Source/Scene/Card/Card.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/Card/Card.storyboard
@@ -38,8 +38,8 @@
                                             <action selector="addCardButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="0pb-cO-iYm"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="23" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hR9-fY-3aQ">
-                                        <rect key="frame" x="68" y="15.000000000000002" width="21" height="20.666666666666671"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hR9-fY-3aQ">
+                                        <rect key="frame" x="68" y="15.000000000000002" width="10.333333333333329" height="20.666666666666671"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
