--- a/Cardna-iOS/Cardna-iOS/Source/Scene/MyPageSetting/MyPageSetting.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/MyPageSetting/MyPageSetting.storyboard
@@ -26,6 +26,9 @@
                                         </constraints>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="icbtBack"/>
+                                        <connections>
+                                            <action selector="backButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Mcb-no-Tme"/>
+                                        </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="설정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3qH-8y-aI8">
                                         <rect key="frame" x="192" y="8.5" width="30" height="27"/>
