--- a/Cardna-iOS/Cardna-iOS/Source/Scene/SelectCard/SelectCard.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/SelectCard/SelectCard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -19,17 +19,6 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oxx-6f-9hB">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jv6-fy-I5v">
-                                        <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="Jv6-fy-I5v" secondAttribute="height" multiplier="1:1" id="fHu-wJ-GQZ"/>
-                                        </constraints>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="icbtBack"/>
-                                        <connections>
-                                            <action selector="backButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="vRo-Af-LXP"/>
-                                        </connections>
-                                    </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="대표카드 수정" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VBu-Ds-2Tz">
                                         <rect key="frame" x="160.5" y="11.5" width="93" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -45,18 +34,29 @@
                                             <action selector="completeButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="LoL-l3-bKg"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jv6-fy-I5v">
+                                        <rect key="frame" x="8" y="1" width="42" height="42"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Jv6-fy-I5v" secondAttribute="height" multiplier="1:1" id="IQQ-Yj-WGC"/>
+                                            <constraint firstAttribute="height" constant="42" id="jTE-OF-jWI"/>
+                                        </constraints>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" image="icbtBack"/>
+                                        <connections>
+                                            <action selector="backButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="vRo-Af-LXP"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.070588235294117646" green="0.070588235294117646" blue="0.070588235294117646" alpha="0.0" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="XYo-YI-6Ku" firstAttribute="top" secondItem="Oxx-6f-9hB" secondAttribute="top" id="0r1-0x-nvc"/>
                                     <constraint firstItem="VBu-Ds-2Tz" firstAttribute="centerX" secondItem="Oxx-6f-9hB" secondAttribute="centerX" id="9RX-H5-0wF"/>
+                                    <constraint firstItem="Jv6-fy-I5v" firstAttribute="leading" secondItem="Oxx-6f-9hB" secondAttribute="leading" constant="8" id="Gkx-jm-TxM"/>
                                     <constraint firstAttribute="trailing" secondItem="XYo-YI-6Ku" secondAttribute="trailing" id="Mex-Wj-SmY"/>
-                                    <constraint firstItem="Jv6-fy-I5v" firstAttribute="top" secondItem="Oxx-6f-9hB" secondAttribute="top" id="RPV-cv-XBy"/>
                                     <constraint firstItem="VBu-Ds-2Tz" firstAttribute="centerY" secondItem="Oxx-6f-9hB" secondAttribute="centerY" id="RQf-Jt-kjD"/>
+                                    <constraint firstItem="Jv6-fy-I5v" firstAttribute="top" secondItem="Oxx-6f-9hB" secondAttribute="top" constant="1" id="Ria-Gj-POP"/>
                                     <constraint firstAttribute="height" constant="44" id="Tbc-2h-sWv"/>
-                                    <constraint firstItem="Jv6-fy-I5v" firstAttribute="leading" secondItem="Oxx-6f-9hB" secondAttribute="leading" id="ddd-VA-7Id"/>
                                     <constraint firstAttribute="bottom" secondItem="XYo-YI-6Ku" secondAttribute="bottom" id="j7W-gz-nU7"/>
-                                    <constraint firstAttribute="bottom" secondItem="Jv6-fy-I5v" secondAttribute="bottom" id="m1h-xv-bJv"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wm1-ds-FT1">
