--- a/Cardna-iOS/Cardna-iOS/Source/Scene/MyPageSetting/MyPageSettingRules.storyboard
+++ b/Cardna-iOS/Cardna-iOS/Source/Scene/MyPageSetting/MyPageSettingRules.storyboard
@@ -31,8 +31,8 @@
                                             <action selector="backButtonDidTap:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="7eM-1G-wte"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZZz-qk-bGX">
-                                        <rect key="frame" x="192.5" y="11.5" width="29" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="   " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZZz-qk-bGX">
+                                        <rect key="frame" x="200.5" y="11.5" width="13.5" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" systemColor="linkColor"/>
                                         <nil key="highlightedColor"/>
